MDEV-11746: Wrong result upon using FIRST_VALUE with a window frame

Reimplement FIRST_VALUE to act as NTH_VALUE with 0 offset. The previous
implementation was flawed when the window frame would remove values.